Fixed image shifting (issue #858).

--- a/client/src/widgets/media-button.scss
+++ b/client/src/widgets/media-button.scss
@@ -20,6 +20,7 @@
         &:hover {
             color: $media-bar-icon-color;
         }
+        opacity: 0.25;
     }
 
     .label {
